trying to fix tthe spacing

--- a/styles.css
+++ b/styles.css
@@ -218,6 +218,7 @@ section {
 .code-block .line {
     display: block;
     white-space: normal;
+    word-break: break-word;
 }
 
 .code-block .line-num {
